fixed file path issue for gh-pages

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 	<link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
 	
 	<!-- CSS -->	
-	<link href="/css/dist/codr.min.css" rel="stylesheet" type="text/css">	
+	<link href="css/dist/codr.min.css" rel="stylesheet" type="text/css">	
 	
 	<!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 8]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <![endif]-->
     
-    <link rel="shortcut icon" href="/img/dist/favicon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/dist/favicon_180.png">
+    <link rel="shortcut icon" href="img/dist/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/dist/favicon_180.png">
 	
 </head>
 <!-- END HEAD -->
@@ -103,7 +103,7 @@
 				<div class="row">		
 					<div class="col-md-5 match-height pp-wrapper">
 						<div class="profile-picture style-profile">
-							<img src="/img/dist/general/profile.jpg" alt="profile picture" class="img-responsive"/>
+							<img src="img/dist/general/profile.jpg" alt="profile picture" class="img-responsive"/>
 						</div>
 					</div>					
 					<div class="col-md-7 match-height">
@@ -177,7 +177,7 @@
 		</div>
 	</section>	
 	<section class="work-carousel wow fadeIn">
-		<div class="item" style="background-image: url('/img/dist/projects/project1/background.jpg')">
+		<div class="item" style="background-image: url('img/dist/projects/project1/background.jpg')">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4 col-md-push-8">
@@ -191,12 +191,12 @@
 						</div>
 					</div>
 					<div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="/img/dist/projects/project1/image.png" class="img-responsive work-image" alt="">
+                        <img src="img/dist/projects/project1/image.png" class="img-responsive work-image" alt="">
                     </div>
 				</div>
 			</div>
 		</div>
-		<div class="item" style="background-image: url('/img/dist/projects/project2/background.jpg')">
+		<div class="item" style="background-image: url('img/dist/projects/project2/background.jpg')">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4 col-md-push-8">
@@ -210,7 +210,7 @@
 						</div>
 					</div>
 					<div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="/img/dist/projects/project2/image.png" class="img-responsive work-image" alt="">
+                        <img src="img/dist/projects/project2/image.png" class="img-responsive work-image" alt="">
                     </div>
 				</div>
 			</div>
@@ -314,7 +314,7 @@
 	<!-- END FOOTER -->
 	
 	<!-- JS -->
-	<script src="/js/dist/codr.min.js"></script>
+	<script src="js/dist/codr.min.js"></script>
 
 </body>
 <!-- END BODY -->
