fixed file path issue for secondary index

--- a/alt_index.html
+++ b/alt_index.html
@@ -22,31 +22,31 @@
 	<link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
 	
 	<!-- CORE -->
-	<link href="/css/src/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="css/src/bootstrap.min.css" rel="stylesheet" type="text/css">
 	
 	<!-- Retina.js -->
-	<script src="/js/src/retina.min.js"></script>
+	<script src="js/src/retina.min.js"></script>
 	
 	<!-- PLUGINS -->
-	<link href="/css/src/jpreloader.css" rel="stylesheet" type="text/css">
-	<link href="/css/src/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href="/css/src/animate.min.css" rel="stylesheet" type="text/css">
-	<link href="/css/src/magnific-popup.css" rel="stylesheet" type="text/css">
+	<link href="css/src/jpreloader.css" rel="stylesheet" type="text/css">
+	<link href="css/src/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="css/src/animate.min.css" rel="stylesheet" type="text/css">
+	<link href="css/src/magnific-popup.css" rel="stylesheet" type="text/css">
 	
-	<link href="/css/src/owl.carousel.css" rel="stylesheet" type="text/css">
-	<link href="/css/src/owl.theme.css" rel="stylesheet" type="text/css">
-	<link href="/css/src/owl.transitions.css" rel="stylesheet" type="text/css">
+	<link href="css/src/owl.carousel.css" rel="stylesheet" type="text/css">
+	<link href="css/src/owl.theme.css" rel="stylesheet" type="text/css">
+	<link href="css/src/owl.transitions.css" rel="stylesheet" type="text/css">
 	
 	<!-- CUSTOM -->
-	<link href="/css/src/rele.css" rel="stylesheet" type="text/css">
+	<link href="css/src/rele.css" rel="stylesheet" type="text/css">
 	
 	<!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 8]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <![endif]-->
     
-    <link rel="shortcut icon" href="/img/dist/favicon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/dist/favicon_180.png">
+    <link rel="shortcut icon" href="img/dist/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/dist/favicon_180.png">
 	
 </head>
 <!-- END HEAD -->
@@ -119,7 +119,7 @@
 				<div class="row">		
 					<div class="col-md-5 match-height pp-wrapper">
 						<div class="profile-picture style-profile">
-							<img src="/img/dist/general/profile.jpg" alt="profile picture" class="img-responsive"/>
+							<img src="img/dist/general/profile.jpg" alt="profile picture" class="img-responsive"/>
 						</div>
 					</div>					
 					<div class="col-md-7 match-height">
@@ -193,7 +193,7 @@
 		</div>
 	</section>	
 	<section class="work-carousel wow fadeIn">
-		<div class="item" style="background-image: url('/img/dist/projects/project1/background.jpg')">
+		<div class="item" style="background-image: url('img/dist/projects/project1/background.jpg')">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4 col-md-push-8">
@@ -207,12 +207,12 @@
 						</div>
 					</div>
 					<div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="/img/dist/projects/project1/image.png" class="img-responsive work-image" alt="">
+                        <img src="img/dist/projects/project1/image.png" class="img-responsive work-image" alt="">
                     </div>
 				</div>
 			</div>
 		</div>
-		<div class="item" style="background-image: url('/img/dist/projects/project2/background.jpg')">
+		<div class="item" style="background-image: url('img/dist/projects/project2/background.jpg')">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4 col-md-push-8">
@@ -226,7 +226,7 @@
 						</div>
 					</div>
 					<div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="/img/dist/projects/project2/image.png" class="img-responsive work-image" alt="">
+                        <img src="img/dist/projects/project2/image.png" class="img-responsive work-image" alt="">
                     </div>
 				</div>
 			</div>
@@ -330,24 +330,24 @@
 	<!-- END FOOTER -->
 	
 	<!-- CORE SCRIPTS -->
-	<script src="/js/src/jquery.min.js"></script>
-	<script src="/js/src/bootstrap.min.js"></script>
+	<script src="js/src/jquery.min.js"></script>
+	<script src="js/src/bootstrap.min.js"></script>
 	
 	<!-- PLUGIN SCRIPTS -->
-	<script src="/js/src/jpreloader.min.js"></script>
-	<script src="/js/src/detectmobilebrowser.js"></script>
-	<script src="/js/src/debouncer.js"></script>
-	<script src="/js/src/jquery.easing.min.js"></script>
-	<script src="/js/src/jquery.sticky.js"></script>
-	<script src="/js/src/jquery.magnific-popup.min.js"></script>
-	<script src="/js/src/jquery.matchHeight-min.js"></script>
-	<script src="/js/src/wow.min.js"></script>	
-	<script src="/js/src/skrollr.min.js"></script>
-	<script src="/js/src/owl.carousel.js"></script>
+	<script src="js/src/jpreloader.min.js"></script>
+	<script src="js/src/detectmobilebrowser.js"></script>
+	<script src="js/src/debouncer.js"></script>
+	<script src="js/src/jquery.easing.min.js"></script>
+	<script src="js/src/jquery.sticky.js"></script>
+	<script src="js/src/jquery.magnific-popup.min.js"></script>
+	<script src="js/src/jquery.matchHeight-min.js"></script>
+	<script src="js/src/wow.min.js"></script>	
+	<script src="js/src/skrollr.min.js"></script>
+	<script src="js/src/owl.carousel.js"></script>
 	
 	<!-- CUSTOM SCRIPT -->
-	<script src="/js/src/rele.js"></script>
-	<script src="/js/src/owl.js"></script>
+	<script src="js/src/rele.js"></script>
+	<script src="js/src/owl.js"></script>
 
 </body>
 <!-- END BODY -->
