--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
     <link rel="shortcut icon" href="img/dist/favicon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/dist/favicon_180.png">
 	
+	<!-- Google Analytics -->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+	  ga('create', 'UA-64516156-3', 'auto');
+	  ga('send', 'pageview');	
+	</script>
 </head>
 <!-- END HEAD -->
 
