--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand visible-xs visible-sm" href="#page-top">RELE</a>
+				<a class="navbar-brand visible-xs visible-sm" href="#page-top">CODR</a>
 			</div>
 			
 			<div class="collapse navbar-collapse" id="rele-collapse">
